--- a/src/styles/sections/partnership.styl
+++ b/src/styles/sections/partnership.styl
@@ -1,7 +1,14 @@
 .partnership 
   text-align: center
-  padding: 56px 0
-
+  padding: 54px 0 60px
+  @media small
+    padding-top: 50px 
+  @media regular
+    padding 136px 0 150px
+.partnership .desc
+   max-width 780px
+   line-height 1.4
+   margin: 42px auto 16px 
 .partnership .btn
-  margin-top 32px
+  margin-top 30px
   
