--- a/src/templates/sections/leadership.pug
+++ b/src/templates/sections/leadership.pug
@@ -1,9 +1,8 @@
-section.leadership
+section.leadership#team
   .container
     h2.title=i18n.leadership.title
-    p.leadership__text=i18n.leadership.text
+    p.desc=i18n.leadership.text
     .leadership__row
       .leadership__img
         img(src="/img/leadership/leadership.png", alt="")
-      .leadership__block
-        p!=i18n.leadership.quote
+      .leadership__block!=i18n.leadership.quote
