--- a/src/templates/sections/partnership.pug
+++ b/src/templates/sections/partnership.pug
@@ -1,5 +1,5 @@
-section.partnership
+section.partnership#partnership
   .container
     h2.title=i18n.partnership.title
-    p.desc=i18n.partnership.text
-    a(href=i18n.partnership.button).btn=i18n.write
+    p.desc!=i18n.partnership.text
+    a(href="mailto:partner@konfy.care").btn=i18n.write
