--- a/src/templates/sections/youtube.pug
+++ b/src/templates/sections/youtube.pug
@@ -1,7 +1,9 @@
-section.youtube
+section.youtube#youtube
   .container
     h2.title=i18n.youtube.title
-    p=i18n.youtube.text
-
+    .desc=i18n.youtube.text
+    .socials
+      a(href="https://www.youtube.com/c/Konfy/about" target="_blank" rel="nofollow noopener")
+        include ../icons/youtube.svg
     .videoWrapper
-      <iframe width="560" height="349" src="http://www.youtube.com/embed/n_dZNLr2cME?rel=0&hd=1" frameborder="0" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Z0w_pITUTyU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
