--- a/src/styles/blocks/card.styl
+++ b/src/styles/blocks/card.styl
@@ -1,35 +1,74 @@
 .card__list
   padding 0
-  margin 0
-
+  margin -25px -10px 0
+  @media small
+    margin 0
+  @media regular
+    margin 30px 0 0
 .card__row
   border-bottom 1px solid #EBEFF2
-  @media medium
+  padding 50px 10px
+  display block
+  font-family: "Montserrat";
+  @media regular
     display flex
     font-size: 18px;
-    margin 0 -16px
-    padding 32px 0
+    margin 0 -36px
+    padding 50px 0
+
 
 .card__img
-  @media medium
+  padding 10px 0
+  @media small
+    padding 10px 0 32px
+  @media regular
     width 50%
-    padding 0 16px
+    padding 0 36px
     box-sizing: border-box
 
 .card__img svg 
   transition: .25s ease-in-out
   display block
   max-width 100%
+  margin 0 auto
   height: auto;
   background: #FFFFFF;
   box-shadow: 15.4429px 7.72143px 61.7714px rgba(136, 165, 191, 0.38), -15.4429px -7.72143px 61.7714px rgba(255, 255, 255, 0.7);
   border-radius: 30px;
+  
+.card__socials 
+  display flex
+  align-items: center
+  a
+    margin-right 26px
+    font-weight: bold;
+    font-size: 18px;
+
+  .external-link
+    text-decoration: underline
 
 .card__block
-  @media medium
+  padding 0 10px
+  @media regular
     padding 0 16px
     width 50%
     box-sizing: border-box
+.card__block .btn
+  margin-top 46px
+
+.card__info
+  padding 18px 0
+  p
+    margin 0
+  ul
+    padding-left: 26px;
+    margin 16px 0
+  @media small
+    padding 25px 0
+    ul
+      padding-left: 19px;
+  @media regular
+    padding 0 0 25px
 
 .scala-card-text 
   fill: #CE2929
@@ -44,7 +83,6 @@
   background: #CE2929
   .scala-card-text 
     fill: #fff
-
   
 .card-podcast:hover svg 
   fill: #fff
