--- a/src/styles/sections/services.styl
+++ b/src/styles/sections/services.styl
@@ -1,9 +1,13 @@
 .services
   background: --background
-  padding: 56px 0
+  padding: 52px 0 60px
+  @media small
+    padding: 48px 0 60px
+  @media regular
+    padding: 136px 0 152px
 
 .services__list
-  margin 0
+  margin 52px 0 0
   padding 0
   @media regular
     display flex
@@ -12,23 +16,63 @@
 
 .services__item
   display block
+  width 100%
+  margin-top 30px
+  @media small
+    margin-top 60px
   @media regular
-    padding 0 16px
+    padding 0
     box-sizing: border-box
-
+    margin-top: 16px;
+    
 .services__card
-  width 330px
-  padding 16px 16px
+  display: flex;
+  flex-direction: column
+  width 100%
+  min-height: 640px
+  max-width 330px
+  margin auto
+  padding 24px 16px
   box-sizing: border-box
   background: #ffffff
   border-radius: 4px;
   height 100%
+  font-size 14px
+  @media tiny
+    padding 24px 30px
+  @media regular
+    padding 36px 30px
   
+  ul
+    padding 0
+    margin auto 0 24px
+  li
+    display block
+    padding 9px 12px
+    border-bottom 1px solid #EBEFF2
+  @media regular
+    ul
+      margin auto 0 0
+
 .services__img
   text-align: center
+  margin-bottom 12px
 
 .services__title
   font-weight: 500;
   font-size: 24px;
   text-align: center
+  margin 0 0 48px
   color --title
+  font-family: Montserrat;
+  letter-spacing: 0.01em;
+  @media regular
+    margin-bottom 30px
+.services__bottom
+  padding-top 30px
+  text-align: center
+
+  @media small
+    padding-top 60px
+  @media regular
+    padding-top 52px
