--- a/src/templates/sections/hero.pug
+++ b/src/templates/sections/hero.pug
@@ -1,6 +1,6 @@
-section.hero
+section.hero#default
     .container
       .hero__wrap
         h1.title=i18n.hero.title
         p.desc=i18n.hero.text
-        a(href="#").btn=i18n.hero.button
+        a(href="#services").btn.nav-link=i18n.hero.button
