--- a/src/templates/sections/podcasts.pug
+++ b/src/templates/sections/podcasts.pug
@@ -1,4 +1,4 @@
-section.podcasts
+section.podcasts#podcasts
   .container
     h2.title=i18n.podcasts.title
     ul.card__list
@@ -8,17 +8,15 @@ section.podcasts
         .card__block
           .card__info!=i18n.podcasts.list[0].text
           .card__socials.socials
-            a(href="/twitter")
+            a(href=i18n.podcasts.list[0].twitter)
               include ../icons/twitter.svg
-            a(href="/patreon")
-              include ../icons/patreon.svg
+          a(href="/").btn=i18n.listen
       li.card__row
         .card__img.card-podcast
           include ../icons/podcast.svg
         .card__block
           .card__info!=i18n.podcasts.list[1].text
           .card__socials.socials
-            a(href="/twitter")
+            a(href=i18n.podcasts.list[1].twitter)
               include ../icons/twitter.svg
-            a(href="/patreon")
-              include ../icons/patreon.svg
+          a(href="/").btn=i18n.listen
