--- a/src/styles/sections/focus.styl
+++ b/src/styles/sections/focus.styl
@@ -1,4 +1,4 @@
-.focus 
+.focus
   background: --background
   padding: 56px 0 50px
   @media small
@@ -32,18 +32,19 @@
 .focus__socials
   @media small
     margin-top 8px
-.focus__socials .external-link 
+.focus__socials .external-link
   margin-right 16px
   @media small
     font-weight: bold;
     font-size: 24px;
     margin-right 64px
 
-.focus__socials .external-link svg 
+.focus__socials .external-link svg
   width 16px
+  height: 16px
   vertical-align: middle
   @media small
-    width auto
+    width 33px
+    height: 33px
     margin-right 8px
 
-  
