--- a/src/templates/sections/conferences.pug
+++ b/src/templates/sections/conferences.pug
@@ -13,7 +13,8 @@ section.conferences#conferences
             a(href=i18n.conferences.list[0].patreon rel="nofollow noopener" target="_blank")
               include ../icons/patreon.svg
             a(href=i18n.conferences.list[0].site).external-link=i18n.tshirts
-          a(href="https://konfy.care/cfp").btn Get free ticket 
+          a(href="https://www.eventbrite.com/e/haskell-love-tickets-113273839102" rel="nofollow noopener" target="_blank").btn Get free
+          ticket
       li.card__row
         .card__img.card-scala
           include ../icons/scala.svg
