--- a/src/styles/blocks/card.styl
+++ b/src/styles/blocks/card.styl
@@ -18,6 +18,7 @@
     padding 50px 0
 
 .card__img
+
   padding 10px 0
   @media small
     padding 10px 0 32px
@@ -25,7 +26,10 @@
     width 50%
     padding 0 36px
     box-sizing: border-box
-
+.card__img a
+  display: block;
+  text-decoration none
+  color: currentColor
 .card__img svg
   transition: .25s ease-in-out
   display block
