--- a/src/templates/sections/conferences.pug
+++ b/src/templates/sections/conferences.pug
@@ -4,7 +4,8 @@ section.conferences#conferences
     ul.card__list
       li.card__row
         .card__img.card-haskell
-          include ../icons/haskell.svg
+          a(href=i18n.conferences.list[0].link rel="nofollow noopener" target="_blank")
+            include ../icons/haskell.svg
         .card__block
           .card__info!=i18n.conferences.list[0].text
           .card__socials.socials
@@ -12,12 +13,13 @@ section.conferences#conferences
               include ../icons/twitter.svg
             a(href=i18n.conferences.list[0].patreon rel="nofollow noopener" target="_blank")
               include ../icons/patreon.svg
-            a(href=i18n.conferences.list[0].site).external-link=i18n.tshirts
+            a(href=i18n.conferences.list[0].site rel="nofollow noopener" target="_blank").external-link=i18n.tshirts
           a(href="https://www.eventbrite.com/e/haskell-love-tickets-113273839102" rel="nofollow noopener" target="_blank").btn Get free
           ticket
       li.card__row
         .card__img.card-scala
-          include ../icons/scala.svg
+          a(href=i18n.conferences.list[1].link rel="nofollow noopener" target="_blank")
+            include ../icons/scala.svg
         .card__block
           .card__info!=i18n.conferences.list[1].text
           .card__socials.socials
