--- a/src/templates/sections/podcasts.pug
+++ b/src/templates/sections/podcasts.pug
@@ -4,19 +4,21 @@ section.podcasts#podcasts
     ul.card__list
       li.card__row
         .card__img.card-scala
-          include ../icons/scala.svg
+          a(href=i18n.podcasts.list[0].link rel="nofollow noopener" target="_blank")
+            include ../icons/scala.svg
         .card__block
           .card__info!=i18n.podcasts.list[0].text
           .card__socials.socials
             a(href=i18n.podcasts.list[0].twitter)
               include ../icons/twitter.svg
-          a(href="/").btn=i18n.listen
+          a(href=i18n.podcasts.list[0].link rel="nofollow noopener" target="_blank").btn=i18n.listen
       li.card__row
         .card__img.card-podcast
-          include ../icons/podcast.svg
+          a(href=i18n.podcasts.list[1].link rel="nofollow noopener" target="_blank")
+            include ../icons/podcast.svg
         .card__block
           .card__info!=i18n.podcasts.list[1].text
           .card__socials.socials
             a(href=i18n.podcasts.list[1].twitter)
               include ../icons/twitter.svg
-          a(href="/").btn=i18n.listen
+          a(href=i18n.podcasts.list[1].link rel="nofollow noopener" target="_blank").btn=i18n.listen
